# ihandler

./: .gitignore  HISTORY.md  LICENCE  README.md  ROADMAP.md  SUPPORT.md  pyproject.toml  requirements.txt
src/ihandler/: __init__.py  base_input.py  choice_inputs.py  currency_inputs.py  input_handler.py  input_types.py  numeric_inputs.py  string_inputs.py
