[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "ihandler"
version = "0.1.0"
description = "Custom Input Handler for Python and Beyond..."
authors = [{name = "vfm-sb", email = "vfm-sb@proton.me"}]
requires-python = ">=3.11.6"
dependencies = [
  "pyvutils",
]
readme = "README.md"
license = {file = "LICENCE"}
keywords = ["ihandler", "input handler"]
classifiers = [
  "Development Status :: 1 - Planning",
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "Topic :: Software Development",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Programming Language :: Python :: 3.11",
  "Natural Language :: English"
]

#[project.urls]
# Homepage = ""
# Documentation = ""
# Repository = ""
# Issues = ""
# Changelog = ""